Cleanup (#76)
* Update buildscript

* Fix generics

* Refactor `package-info.java` files

* `@SuppressWarnings` shenanigans

* Replace magic numbers

* Remove dead code

* Advanced `instanceof` patterns

* Don't use ctors for primitives

* Misc fixes

* Cleanup: Code Style

* Cleanup: Duplicate Code

* Cleanup: Java Features

* Cleanup: Member Accesses

* Cleanup: Performance

* Cleanup: Source Fixing

* Cleanup: Remove Unnecessary Code

* Cleanup: Everything

* Apply spotless